[package]
name = "dir_tree"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walkdir = "2.4.0"
clap = { version = "4.0", features = ["derive"] }
chrono = "0.4.30"
chrono-tz = "0.8.3"
serde = { version = "1.0.188", features = ["derive"] }
yaml-front-matter = "0.1.0"
